--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,70 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
+
+    <p><strong>Tst PD</strong> ("we", "us", or "our") operates the <strong>Tst PD</strong> mobile application (the "Service").</p>
+
+    <p>This page informs you of our policies regarding the collection, use, and disclosure of Personal Information when you use our Service.</p>
+
+    <p>We will not use or share your information with anyone except as described in this Privacy Policy.</p>
+
+    <h2>Information Collection and Use</h2>
+
+    <p>For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information. The information that we request will be retained on your device and is not collected by us in any way.</p>
+
+    <h3>Data Collection</h3>
+    <ul>
+        <li><strong>Personal Information</strong>: We may collect personal information such as your name, email address, or contact details, but only if necessary for specific functionality.</li>
+        <li><strong>Usage Data</strong>: We may collect information on how the app is accessed and used. This may include information such as your device’s Internet Protocol ("IP") address, device name, operating system version, app configuration, and other diagnostic data.</li>
+        <li><strong>Diagnostic Data</strong>: Our app uses Firebase, a Google-provided analytics and diagnostic service, to collect and analyze diagnostic data. This may include app crash reports and user interaction metrics to help us improve the Service. For more details, refer to <a href="https://firebase.google.com/support/privacy">Firebase Privacy Policy</a>.</li>
+    </ul>
+
+    <h3>Cookies</h3>
+    <p>Our app does not use cookies explicitly. However, the app may use third-party code and libraries that use cookies to collect information and improve their services.</p>
+
+    <h2>Purchases and Subscriptions</h2>
+    <p>
+        Our Service offers paid features through a monthly subscription to access premium status. All purchases and subscription payments are processed securely through the Google Play billing system or your device's app store. We do not collect or store your payment information directly.
+    </p>
+    <p>
+        By subscribing to premium features, you agree to the terms and conditions of your respective app store. If you are under the age of 18, you must have permission from a parent or legal guardian to make any purchases or subscribe to premium content. It is your responsibility to ensure that you have the appropriate consent before completing any transactions.
+    </p>
+    <p>
+        You may manage or cancel your subscription at any time through your app store account settings. Please review your app store’s policies regarding payments, renewals, and cancellations for more information.
+    </p>
+
+    <h2>Security</h2>
+    <p>We value your trust in providing us your Personal Information, thus we strive to use commercially acceptable means of protecting it. However, remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
+
+    <h2>Links to Other Sites</h2>
+    <p>Our Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites.</p>
+
+    <h2>Responsible Use</h2>
+    <p>We encourage responsible use of our app. Any inappropriate or harmful behavior is strictly prohibited. Please adhere to community standards when using this service.</p>
+
+  
+  <h2>Children's Privacy</h2>
+    <p>
+    Our Service is suitable for users of all ages and does not contain content that is inappropriate for children. We do not knowingly collect any personal information from children except as necessary to provide and operate the app’s features, such as subscriptions. 
+      If you are under the age of 18, please ensure you have parental or guardian permission before making any purchases or subscribing to premium features.
+    </p>
+    <p>
+    If you are a parent or guardian and you believe your child has provided us with personal information without your consent, please contact us so that we can take appropriate action.
+  </p>
+
+
+    <h2>Changes to This Privacy Policy</h2>
+    <p>We may update our Privacy Policy to reflect changes in legal regulations or updates to our app content. Thus, you are advised to review this page periodically for any changes.</p>
+
+    <p>This policy is effective as of <strong>June 28, 2025</strong>.</p>
+
+    <h2>Contact Us</h2>
+    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:beniakit2025@gmail.com">beniakit2025@gmail.com</a>.</p>
+</body>
+</html>
