--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Privacy Policy</h1>
 
-    <p><strong>Tst PD</strong> ("we", "us", or "our") operates the <strong>Tst PD</strong> mobile application (the "Service").</p>
+    <p><strong>Ерудит - Інтелектуальна гра</strong> ("we", "us", or "our") operates the <strong>Ерудит - Інтелектуальна гра</strong> mobile application (the "Service").</p>
 
     <p>This page informs you of our policies regarding the collection, use, and disclosure of Personal Information when you use our Service.</p>
 
